# Arc

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: resources.qrc
scripts/: build-linux-release.sh  build-windows-release.ps1
src/: FileBridge.cpp  FileBridge.h  main.cpp
src/core/: AutoSaveManager.cpp  AutoSaveManager.h  CodeAnalyzer.cpp  CodeAnalyzer.h  ProjectIndexer.cpp  ProjectIndexer.h  Symbol.h  SymbolIndex.cpp  SymbolIndex.h  ThreadPool.cpp  ThreadPool.h  WorkspaceWatcher.cpp  WorkspaceWatcher.h
web/: app.js  index.html  styles.css
